--- a/src/css/nodos.css
+++ b/src/css/nodos.css
@@ -2,8 +2,14 @@
 #canvas {
   width: 100%;
   height: 100%;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  flex: 1 1 0%;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0.5rem;
+  z-index: 642;
+  color: white;
+  padding: 15px;
+  backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   overflow: hidden;
 }
 
