--- a/src/css/nodos.css
+++ b/src/css/nodos.css
@@ -6,7 +6,7 @@
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 0.5rem;
   z-index: 642;
-  color: white;
+  color: black;
   padding: 15px;
   backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.1);
