--- a/src/css/core.css
+++ b/src/css/core.css
@@ -171,7 +171,7 @@ z-index: 1026;
     right: 0;
     bottom: 0;
     background-size: contain;
-    background-image: url('https://github.com/mizulegendsstudios/mizu-board/blob/main/src/img/jpg/mesa-escritorio-madera.jpg?raw=true');
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F003%2F226%2F074%2Foriginal%2Fwood-texture-background-free-vector.jpg&f=1&nofb=1&ipt=22ca1f8bea5f9f59c2d7299c8493fc12df100c15b45413ddac61f9fc44b7615d');
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 0.5rem;
     padding: 1rem;
