--- a/docs/core/css/core.css
+++ b/docs/core/css/core.css
@@ -152,7 +152,7 @@ position: absolute;
       align-items: center;
 text-align: center;
 background-size: contain;
-background-image: url('https://github.com/mizulegendsstudios/mizu-axiscore/blob/main/src/images/png/svgmls.png?raw=true');
+background-image: url('https://github.com/mizulegendsstudios/mizu-axiscore/blob/main/src/images/png/svgmls.png');
       transform: rotateY(  0deg) translateZ(0px);
 z-index: 1026;
  }
@@ -171,7 +171,7 @@ z-index: 1026;
     right: 0;
     bottom: 0;
     background-size: contain;
-    background-image: url('https://github.com/mizulegendsstudios/mizu-board/blob/main/docs/apps/diagram/assets/wood-texture.jpg?raw=true');
+    background-image: url('https://github.com/mizulegendsstudios/mizu-board/blob/main/docs/apps/diagram/assets/wood-texture.jpg');
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 0.5rem;
     padding: 1rem;
