--- a/docs/core/css/core.css
+++ b/docs/core/css/core.css
@@ -23,7 +23,17 @@ body {
     position: relative;
     overflow: hidden;                  /* evita scroll si algo se sale */
 }
-
+        .video-background {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%; 
+            min-height: 100%;
+            width: auto; 
+            height: auto;
+            z-index: -1;
+            object-fit: cover;
+        }
 /* --------------------------------------------------
     MONITOR DE INFORMACIÓN
 -------------------------------------------------- */
