--- a/docs/core/css/core.css
+++ b/docs/core/css/core.css
@@ -1,4 +1,5 @@
 /* --------------------------------------------------
+https://github.com/mizulegendsstudios/mizu-board/blob/main/docs/core/css/core.css
     RESET Y BASE
 -------------------------------------------------- */
 * {
