--- a/docs/core/css/core.css
+++ b/docs/core/css/core.css
@@ -112,9 +112,9 @@ body::before {
     height: 4rem;  /* h-16 */
     border-radius: 0.5rem;
 }
-#blue-bar .square:nth-child(1) { background-color: rgba(255, 255, 255, 0.5); }
-#blue-bar .square:nth-child(2) { background-color: rgba(156, 163, 175, 0.5);  /* gray-400 */ }
-#blue-bar .square:nth-child(3) { background-color: rgba(31, 41, 55, 0.5);    /* gray-800 */ }
+#blue-bar .square:nth-child(1) { background-color: rgba(255, 255, 255, 0.5);}
+#blue-bar .square:nth-child(2) { background-color: rgba(156, 163, 175, 0.5);}
+#blue-bar .square:nth-child(3) { background-color: rgba(31, 41, 55, 0.5);}
 
 /* Cuadrado morado abajo en la barra azul */
 #blue-bar .foot-square {
@@ -124,7 +124,7 @@ body::before {
     transform: translateX(-50%);
     width: 4rem;
     height: 4rem;
-    background-color: rgba(168, 85, 247, 0.5); /* purple-500 / 50% */
+    background-color: rgba(168, 85, 247, 0.5);
     border-radius: 0.5rem;
 }
 
@@ -164,7 +164,7 @@ position: absolute;
       align-items: center;
 text-align: center;
 background-size: contain;
-background-image: url('https://cdn.jsdelivr.net/gh//mizulegendsstudios/mizu-axiscore@main/src/images/png/svgmls.png');
+background-image: url('https://cdn.jsdelivr.net/gh/mizulegendsstudios/mizu-axiscore@main/src/images/png/svgmls.png');
       transform: rotateY(  0deg) translateZ(0px);
 z-index: 1026;
  }
