--- a/docs/apps/diagram/css/nodos.css
+++ b/docs/apps/diagram/css/nodos.css
@@ -1,3 +1,7 @@
+/*
+https://github.com/mizulegendsstudios/mizu-board/blob/main/docs/apps/diagram/css/nodos.css
+*/
+
 /* Estilos para el diagrama de flujo */
 #canvas {
   width: 100%;
