--- a/docs/apps/diagram/css/nodos.css
+++ b/docs/apps/diagram/css/nodos.css
@@ -7,13 +7,13 @@ https://github.com/mizulegendsstudios/mizu-board/blob/main/docs/apps/diagram/css
   width: 100%;
   height: 100%;
   flex: 1 1 0%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: hsla(0, 0%, 100%,30%);
   border-radius: 0.5rem;
   z-index: 642;
   color: black;
   padding: 15px;
   backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid hsla(0, 0%, 100%,50%);
   overflow: visible; /* Cambiado a visible para que las flechas no se recorten */
   position: relative;
 }
