--- a/docs/core/css/core.css
+++ b/docs/core/css/core.css
@@ -68,17 +68,18 @@ body::before {
 #red-bar {
     position: absolute;
     width: 100%;
-    height: 5rem;                        /* h-20 = 5rem */
+    height: 3rem;                        /* h-20 = 5rem */
     top: 0;
     left: 0;
     background-color: rgba(30, 0, 0, 0.6); /* red-500 / 50% */
-    border-radius: 0.5rem;
     z-index: 160;
+    align-items: center;
+    justify-content: center;
     transition: transform 0.5s ease, opacity 0.5s ease;
-                        color: white;
-            padding: 15px;
-                           backdrop-filter: blur(5px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+    color: white;
+    padding: 15px;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 /* --------------------------------------------------
