--- a/docs/core/css/core.css
+++ b/docs/core/css/core.css
@@ -42,12 +42,13 @@ body {
     position: absolute;
     top: 1rem;
     right: 1rem;
-    background-color: #1f2937;           /* gray-800 */
+    background-color: rgba(30, 0, 0, 0.6);           /* gray-800 */
     color: #ff0000;
     padding: 0.5rem;
     border-radius: 0.375rem;
     font-size: 0.875rem;
     white-space: nowrap;
+    backdrop-filter: blur(10px);
     z-index: 5000;
 }
 
