--- a/docs/core/css/core.css
+++ b/docs/core/css/core.css
@@ -136,8 +136,8 @@ flex-direction: column;
 -------------------------------------------------- */
 #yellow-square {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 0.4rem;
+    left: 0.4rem;
     width: 2rem;
     height: 2rem;
     background-color: rgba(0, 0, 0, 0.01); 
